--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 	<!-- Video -->
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <iframe width="420" height="315" src="//www.youtube.com/embed/xf6qVCbV5Us" frameborder="0" allowfullscreen></iframe>
         </div>
 
 
