Added copy. Only images left

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product name</h1>
+          <h1>Goes Great With!</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">One sentence describing the product.</p>
+          <p class="lead">Your personal stylist on your phone.</p>
         </div>
       </div>
 
@@ -204,18 +204,17 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+Capsule wardrobe: core of essential items of clothing that could be
+worn in many combinations to give a flexible wardrobe that lasts many
+seasons. A fashion concept created by London's Susie Faux in the
+1970's, popularised in the US by Donna Karen's "7 Easy Pieces"
+collection and still as popular today with stylists such as Gok
+Wan. The Goes Great With! app brings the capsule wardrobe concept to
+your phone. Download our capsules to get the style rules for combining
+clothes.  Load up a picture of that new shirt you're about to buy and
+let the personal wardrobe stylist in your pocket suggest what it Goes
+Great With!
+          </P>
         </div>
       </div>
       <!-- End of marketing 1 -->
@@ -224,17 +223,16 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+Load up pictures of the clothes in your wardrobe and get suggestions
+for combining existing items, and how well those items you really want
+to buy will combine with your own clothes.  Make best use of your
+clothing budget by finding out what key items are missing from your
+wardrobe.  Share wardrobes with your friends; get them to rate the
+suggestions made by Goes Great With!  When you feel like a make-over
+simply download a new capsule and s missing from your wardrobe.  Not
+sure if you are a Kate Moss or a Kate Middleton? Goes Great With!
+will judge the fit of your wardrobe against celebrity influenced style
+capsules.
           </p>
         </div>
         <div class="span5 asset">
