Added links to images on imgur

--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
       <!-- Start of marketing 1-->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
+<a href="http://imgur.com/l3BL871"><img src="http://i.imgur.com/l3BL871.png" title="Hosted by imgur.com"/></a>
         </div>
         <div class="span5 copy">
           <p>
@@ -236,7 +237,8 @@ capsules.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
+<a href="http://imgur.com/q4xC4z7"><img src="http://i.imgur.com/q4xC4z7.png" title="Hosted by imgur.com"/></a>
         </div>
       </div>
       <!-- End of marketing 2 -->
