Fixed marketing copy in index.html

--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@ to buy will combine with your own clothes.  Make best use of your
 clothing budget by finding out what key items are missing from your
 wardrobe.  Share wardrobes with your friends; get them to rate the
 suggestions made by Goes Great With!  When you feel like a make-over
-simply download a new capsule and s missing from your wardrobe.  Not
-sure if you are a Kate Moss or a Kate Middleton? Goes Great With!
-will judge the fit of your wardrobe against celebrity influenced style
-capsules.
+simply download a new capsule and see what's missing from your
+wardrobe.  Not sure if you are a Kate Moss or a Kate Middleton? Goes
+Great With!  will judge the fit of your wardrobe against celebrity
+influenced style capsules.
           </p>
         </div>
         <div class="span5 asset">
@@ -257,7 +257,7 @@ capsules.
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+                    Frequently Asked Question..
                   </div>
                 </div>
               </div>
