--- a/index.html
+++ b/index.html
@@ -152,46 +152,54 @@
 
         <!-- Actions -->
         <div class="span5 actions">
-          <div class="span8 offset2">
-            <div class="statistics">
-              <div class="span4">
-                <!-- linediv-l and linediv-r give dividing lines that look
-                different in horizontal and vertical layouts, illustrating
-                media queries. -->
-                <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+          <div class="row-fluid">
+            <div class="span8 offset2">
+              <div class="row-fluid statistics">
+                <div class="span4">
+                  <!-- linediv-l and linediv-r give dividing lines that look
+                  different in horizontal and vertical layouts, illustrating
+                  media queries. -->
+                  <div class="linediv-l">
+                  <h3>1000</h3> <p>backers</p>
+                  </div>
                 </div>
-              </div>
-              <div class="span4">
-                <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                <div class="span4">
+                  <div class="linediv-c">
+                    <h3>$6000</h3> <p>of $10,000</p>
+                  </div>
                 </div>
-              </div>
-              <div class="span4">
-                <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <div class="span4">
+                  <div class="linediv-r">
+                  <h3>10</h3> <p>days left</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="span10 offset1">
-            <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+          <div class="row-fluid">
+            <div class="span10 offset1">
+              <!-- Bootstrap progress bar -->
+              <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+              <div class="thermometer progress active">
+                <div class="bar bar-success" style="width: 60%;"></div>
+                <div class="bar bar-warning" style="width: 40%;"></div>
+              </div>
             </div>
           </div>
-          <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+          <div class="row-fluid">
+            <div class="span6 offset3 order">
+              <!-- Standard Bootstrap button. -->
+              <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+              <button class="btn btn-success btn-large">Preorder</button>
+            </div>
           </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+          <div class="row-fluid">
+            <div class="span8 offset2 social">
+              <!-- Social buttons are not included in default Bootstrap. -->
+              <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+              <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+              <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            </div>
           </div>
         </div>
       </div>
@@ -201,7 +209,7 @@
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
           <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
-<a href="http://imgur.com/l3BL871"><img src="http://i.imgur.com/l3BL871.png" title="Hosted by imgur.com"/></a>
+          <img title="Goes Great With!" alt="Coathanger logo" src="http://i.imgur.com/l3BL871.png"/>
         </div>
         <div class="span5 copy">
           <p>
@@ -237,8 +245,7 @@ influenced style capsules.
           </p>
         </div>
         <div class="span5 asset">
-          <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
-<a href="http://imgur.com/q4xC4z7"><img src="http://i.imgur.com/q4xC4z7.png" title="Hosted by imgur.com"/></a>
+          <img title="Goes Great With! App" alt="Welcome screen of Goes Great With! app" src="http://i.imgur.com/q4xC4z7.png"/>
         </div>
       </div>
       <!-- End of marketing 2 -->
