--- a/index.html
+++ b/index.html
@@ -208,9 +208,15 @@
           </div>
           <div class="row-fluid">
             <div class="span6 offset3 order">
-              <!-- Standard Bootstrap button. -->
-              <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-              <button class="btn btn-success btn-large">Preorder</button>
+<a class="coinbase-button"
+   data-button-style="custom_large"
+   data-button-text="Preorder with Bitcoin"
+   data-code="33ce642e4535cfbb3b3cf4925f937223"
+   href="https://coinbase.com/checkouts/33ce642e4535cfbb3b3cf4925f937223">
+Preorder With Bitcoin</a>
+ <script src="https://coinbase.com/assets/button.js"
+         type="text/javascript">
+ </script>
             </div>
           </div>
           <div class="row-fluid">
